Changed the selection header and almost fixed the selection border to not shift the cells

--- a/app/styles/ember-frost-table/_frost-table.scss
+++ b/app/styles/ember-frost-table/_frost-table.scss
@@ -3,6 +3,7 @@
 //
 
 .frost-table {
+  border-collapse: collapse;
   table-layout: fixed;
 
   &.shift-down {
