--- a/app/styles/ember-frost-table/frost-table-row.scss
+++ b/app/styles/ember-frost-table/frost-table-row.scss
@@ -1,7 +1,20 @@
+$frost-table-row-border-transparent: rgba(0, 0, 0, 0);
+
 .frost-table-row {
-  &.is-selected {
-    position: relative;
-    outline: 1px solid $frost-color-blue-1;
-    z-index: 1;
+  td {
+    padding: calc(#{$frost-table-cell-padding} + 1px) $frost-table-cell-padding;
   }
+
+  &.is-selected {
+    border: 1px solid $frost-color-blue-1;
+
+    td {
+      padding-top: $frost-table-cell-padding;
+    }
+  }
+}
+
+.frost-table-row-selection {
+  display: flex;
+  justify-content: center;
 }
